<resources>
    <string name="app_name">Manulife SOP</string>

    <!--multi check dialog-->
    <string name="sign_success_main_product" translatable="false">Sản phẩm chính</string>

    <!--activity_welcome-->
    <string name="activity_welcome_title">Chào mừng bạn</string>
    <string name="activity_welcome_content">Khi bấm vào đồng ý, bạn đã chấp nhận các điều khoản &amp; điều kiện của ứng dụng Manulife</string>
    <string name="activity_welcome_note">Tôi đồng ý cho phép ứng dụng truy cập danh bạn điện thoại của tôi</string>

    <string name="activity_welcome_title_step1">Quản lý khách hàng</string>
    <string name="activity_welcome_content_tep1">Tạo danh sách khách hàng theo từng tháng giúp bạn quản lý &amp; chăm sóc khách hàng tốt hơn</string>
    <string name="activity_welcome_title_step2">Theo dõi trạng thái khách hàng</string>
    <string name="activity_welcome_content_tep2">Cập nhật, theo dõi khách hàng trong từng giai đoạn từ liên hệ cho đến khi ký kết hợp đồng</string>
    <string name="activity_welcome_title_step3">Biểu đồ cập nhật số lượng khách hàng trong tháng</string>
    <string name="activity_welcome_content_tep3">Cập nhật số lượng thông tin khách hàng chính xác giúp bạn đạt kết quả kinh doanh hiệu quả nhất</string>

    <!--activity_login-->
    <string name="activity_login_title">Đăng nhập tài khoản</string>
    <string name="activity_login_hello">Vui lòng nhập mật khẩu</string>
    <string name="activity_login_email">Nhập mã đại lý</string>
    <string name="activity_login_pass">Nhập mật khẩu</string>
    <string name="activity_login_forget_pass">Quên mật khẩu?</string>
    <string name="activity_login_button">Đăng nhập</string>

    <string name="activity_login_agency_title">Nhập mã đại lý</string>
    <string name="activity_login_phone_title">Nhập số điện thoại của bạn</string>
    <string name="activity_login_phone_hint">Số điện thoại</string>
    <string name="activity_login_create_pass_title">Tạo mật khẩu mới</string>
    <string name="activity_login_create_confirm_pass_title">Nhập lại mật khẩu</string>


    <string name="activity_login_otp_hint">Nhập mã xác thực</string>
    <string name="activity_login_otp_title">Tài khoản của bạn chưa được xác minh. Vui lòng nhấn vào nút <b>nhận mã kích hoạt</b> để nhận mã xác thực qua số điện thoại </string>
    <string name="activity_login_otp_resent">Gửi lại mã xác thực</string>

    <string-array name="loin_actionbar_array">
        <item>Mã đại lý của bạn</item>
        <item>Số điện thoại của bạn</item>
        <item>Đăng nhập tài khoản</item>
        <item>Xác thực số điện thoại</item>
        <item>Tạo mật khẩu</item>
        <item>Tạo mật khẩu</item>
    </string-array>


    <string name="activity_login_welcome_title">Thiết lập mục tiêu thu nhập</string>
    <string name="activity_login_welcome_content">\" Hành trình vạn dặm được bắt đầu bằng những bước đầu tiên \"</string>

    <!--activity_create_plan-->
    <string name="activity_create_plan_title_actionbar">Thiết lập kế hoạch kinh doanh</string>
    <string name="activity_create_plan_title_step1">Thiết lập thời gian mục tiêu</string>
    <string name="activity_create_plan_title_step2">Thu nhập mong muốn</string>
    <string name="activity_create_plan_title_step3">Kết quả 1/2: Khách hàng dự kiến</string>
    <string name="activity_create_plan_title_step4">Kết quả 2/2: Thu nhập đạt được</string>
    <string name="activity_create_plan_title_seekbar1_step2">Mức hoa hồng</string>
    <string name="activity_create_plan_title_seekbar2_step2">Trung bình hợp đồng (Triệu đồng)</string>
    <string name="activity_create_plan_title_seekbar3_step2">Thu nhập mong muốn hàng tháng (Triệu đồng)</string>

    <!--activity_create_plan_SM-->
    <string name="activity_create_plan_SM_title_step2">Kế hoạch dự kiến</string>
    <string name="activity_create_plan_SM_title_step3">Kế hoạch kinh doanh SM</string>

    <!--activity_create_plan_UM-->
    <string name="activity_create_plan_UM_title_step2">Dự báo kế hoạch tuyển dụng</string>
    <string name="activity_create_plan_UM_title_step3">Tuyển dụng đại lý mới</string>
    <string name="activity_create_plan_UM_title_step4">Đại lý hiện hữu</string>
    <string name="activity_create_plan_UM_title_step5">Phát triển UM mới</string>
    <string name="activity_create_plan_UM_title_step7">Sản xuất cá nhân</string>
    <string name="activity_create_plan_UM_title_step8">Sản xuất cá nhân</string>

    <!--activity_signed_success-->
    <string name="activity_signed_success_title">Vui lòng nhập vài thông tin dưới đây để hoàn tất hợp đồng</string>
    <string name="activity_signed_success_hint_1">Nhập doanh thu bảo hiểm 1 năm</string>
    <string name="activity_signed_success_hint_2">Nhập hoa hồng nhận năm đầu tiên</string>
    <string name="activity_signed_success_hint_3">Số lượng hợp đồng</string>

    <!--activity_main_fa-->
    <string name="activity_main_fa_dashboard">Trang chủ</string>
    <string name="hint_name">Họ &amp; tên</string>

    <!--activity_setting-->
    <string name="activity_goal_title">Dự báo mục tiêu &amp; thu nhập cá nhân</string>



</resources>
