<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:id="@+id/layout_root">

    <include
        android:id="@+id/layout_top"
        layout="@layout/actionbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_done"
        android:layout_below="@+id/layout_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="Hợp đồng đã được ký thành công"
                android:textColor="@android:color/black"
                android:textSize="@dimen/welcome_activity_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/activity_signed_success_title"
                android:textSize="@dimen/welcome_activity_note" />

            <LinearLayout
                android:id="@+id/layout_sign_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Ngày ký hợp đồng: "
                    android:textSize="@dimen/welcome_activity_note" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_sign_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/image_right"
                        android:text=""
                        android:textSize="@dimen/welcome_activity_note"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/image_right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_height="20dp"
                        android:layout_width="20dp"
                        android:src="@drawable/ic_calendar"/>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/cus_border_edittext">

                <EditText
                    android:id="@+id/edt_revenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/txt_vnd"
                    android:background="@android:color/transparent"
                    android:hint="@string/activity_signed_success_hint_1"
                    android:inputType="numberDecimal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/welcome_activity_note" />

                <TextView
                    android:id="@+id/txt_vnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="VND"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/welcome_activity_note"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/cus_border_edittext">

                <EditText
                    android:id="@+id/edt_profit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/txt_percent"
                    android:background="@android:color/transparent"
                    android:hint="@string/activity_signed_success_hint_2"
                    android:inputType="numberDecimal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/welcome_activity_note" />

                <TextView
                    android:id="@+id/txt_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="%"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/welcome_activity_note"
                    android:textStyle="bold" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edt_contact_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/cus_border_edittext"
                android:hint="@string/activity_signed_success_hint_3"
                android:inputType="numberDecimal"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/welcome_activity_note" />

            <!--multicheck main product-->
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="Sản phẩm chính"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/welcome_activity_content" />

                <manulife.manulifesop.element.customViews.MultiSelectionObjectSpinner
                    android:id="@+id/spinner_main_produce"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:prompt="@string/sign_success_main_product"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/welcome_activity_content" >
                </manulife.manulifesop.element.customViews.MultiSelectionObjectSpinner>

            </LinearLayout>

            <!--multicheck main product-->
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="Sản phẩm phụ"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/welcome_activity_content" />

                <manulife.manulifesop.element.customViews.MultiSelectionObjectSpinner
                    android:id="@+id/spinner_sub_produce"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:prompt="@string/sign_success_main_product"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/welcome_activity_content" >
                </manulife.manulifesop.element.customViews.MultiSelectionObjectSpinner>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/cus_button_events"
        android:text="Hoàn tất"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>